--- a/index.html
+++ b/index.html
@@ -30,22 +30,35 @@
     <p>Soundboard is now available! Activate via Overlay > Soundboard!</p>
   </div>
   <div class="w-3/4 mx-auto mt-3 relative">
-    <div class="navbar flex flex-row min-h-[60px] max-h-[110px]">
+    <div class="navbar flex flex-row max-h-[110px]">
       <a href="index.html" class="">
         <div class="logo flex flex-row">
-          <img src="public/image/navbar_logo.png" alt="saweria" class="w-auto min-h-[60px] max-h-[70px]  ">
-          <a href="index.html" class="font-[comfortaa] text-[28px] font-extralight self-end pt-9">saweria.co</a>
+          <img src="public/image/navbar_logo.png" alt="saweria" class="w-auto min-h-[60px] max-h-[70px] w-auto ">
+          <a href="index.html" class="font-[comfortaa] text-[28px] font-extralight self-end pt-8">saweria.co</a>
         </div>
         <div class="w-2/3"></div>
       </a>
       <div class="group profile flex items-center px-5 border-[1px] border-black rounded-lg bg-[#F2F7F5] relative">
-        <button type="button" class="flex items-center gap-2 group-active:left-0.5 group-active:top-1">
+        <button type="button" class="flex items-center gap-2 group-active:left-0.5 group-active:top-0.5">
           <p class="bg-[#689cb8] py-3 px-5 rounded-3xl">H</p>
           <p class="font-ibm">haikalnuril</p>
         </button>
-        <div class="-z-10 group-active:left-0.5 group-active:top-1 absolute bg-gray-900 rounded-lg w-52 h-[77px] left-1.5 top-2">
+        <div class="-z-10 group-active:left-0.5 group-active:top-0.5 absolute bg-gray-900 rounded-lg w-52 h-[75px] left-1.5 top-1.5">
         </div>
       </div>
+    </div>
+    <div class="row-kiri w-1/2 bg-[#B2E0E6] border-[1px] border-black rounded-lg mt-5">
+        <a href="#">
+          <div class="pt-8 pl-10 pr-10 flex w-full">
+            <p class="font-[comfortaa] text-3xl">Overlay</p>
+            <div class="w-full"></div>
+            <img src="public/image/capy_happy.svg" alt="" class="max-h-[110px] place-self-end">
+          </div>
+          <div class="text pb-8 pl-10">
+            <p class="font-ibm">Set up Alerts and other overlays here.</p>
+            <p class="font-ibm">Compatible with OBS and Streamlabs.</p>
+          </div>
+        </a>
     </div>
   </div>
 </body>
