--- a/index.html
+++ b/index.html
@@ -47,19 +47,63 @@
         </div>
       </div>
     </div>
-    <div class="row-kiri w-1/2 bg-[#B2E0E6] border-[1px] border-black rounded-lg mt-5">
-        <a href="#">
-          <div class="pt-8 pl-10 pr-10 flex w-full">
-            <p class="font-[comfortaa] text-3xl">Overlay</p>
-            <div class="w-full"></div>
-            <img src="public/image/capy_happy.svg" alt="" class="max-h-[110px] place-self-end">
-          </div>
-          <div class="text pb-8 pl-10">
-            <p class="font-ibm">Set up Alerts and other overlays here.</p>
-            <p class="font-ibm">Compatible with OBS and Streamlabs.</p>
-          </div>
-        </a>
+    <div class="mt-8 flex gap-9">
+      <div class="row-kiri w-1/2 flex flex-col gap-9">
+        <div class="kiri-atas bg-[#B2E0E6] border-[1px] border-black rounded-lg">
+          <a href="#">
+            <div class="pt-8 pl-10 pr-10 flex w-full">
+              <p class="font-[comfortaa] text-3xl">Overlay</p>
+              <div class="w-full"></div>
+              <img src="public/image/capy_happy.svg" alt="" class="max-h-[110px] place-self-end">
+            </div>
+            <div class="text pb-12 pl-10">
+              <p class="font-ibm">Set up Alerts and other overlays here.</p>
+              <p class="font-ibm">Compatible with OBS and Streamlabs.</p>
+            </div>
+          </a>
+        </div>
+        <div class="kiri-bawah bg-[#fac76c] border-[1px] border-black rounded-lg">
+          <a href="#">
+            <div class="pt-8 pl-10 pr-10 flex w-full">
+              <p class="font-[comfortaa] text-3xl">Support Sent</p>
+              <div class="w-52"></div>
+              <img src="public/image/doggo_happy.svg" alt="" class="max-h-[170px]">
+            </div>
+            <div class="text pb-8 pl-10">
+              <p class="font-ibm">See the support you have sent.</p>
+              <p class="font-ibm"></p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="row-kanan w-1/2 flex flex-col gap-9">
+        <div class="kanan-atas bg-[#C2ACE6] border-[1px] border-black rounded-lg">
+          <a href="#">
+            <div class="pt-8 pl-10 pr-6 flex w-full">
+              <p class="font-[comfortaa] text-3xl font-semibold">Support and Cashout</p>
+              <div class="w-24"></div>
+              <img src="public/image/chicken_money.svg" alt="" class="max-h-[135px] place-self-end">
+            </div>
+            <div class="text pb-12 pl-10">
+              <p class="font-ibm ">See your incoming support and cashout history here.</p>
+            </div>
+          </a>
+        </div>
+        <div class="kanan-atas bg-[#fe98a3] border-[1px] border-black rounded-lg">
+          <a href="#">
+            <div class="pt-8 pl-10 pr-6 flex w-full">
+              <p class="font-[comfortaa] text-3xl font-semibold">Integration</p>
+              <div class="w-full"></div>
+              <img src="public/image/raccoon_happy.svg" alt="" class="max-h-[152px] place-self-end">
+            </div>
+            <div class="text pb-12 pl-10">
+              <p class="font-ibm ">Integrate other apps with saweria!</p>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
+
   </div>
 </body>
 </html>
