--- a/index.html
+++ b/index.html
@@ -49,23 +49,24 @@
     </div>
     <div class="mt-8 flex gap-9">
       <div class="row-kiri w-1/2 flex flex-col gap-9">
-        <div class="kiri-atas bg-[#B2E0E6] border-[1px] border-black rounded-lg">
+        <div class="kiri-atas group bg-[#B2E0E6] hover:mt-0.5 hover:-mb-0.5 border-[1px] border-black rounded-lg relative">
           <a href="#">
             <div class="pt-8 pl-10 pr-10 flex w-full">
-              <p class="font-[comfortaa] text-3xl">Overlay</p>
+              <p class="font-[comfortaa] text-3xl font-semibold">Overlay</p>
               <div class="w-full"></div>
               <img src="public/image/capy_happy.svg" alt="" class="max-h-[110px] place-self-end">
             </div>
-            <div class="text pb-12 pl-10">
+            <div class="text pb-12 group-hover:pb-13 pl-10">
               <p class="font-ibm">Set up Alerts and other overlays here.</p>
               <p class="font-ibm">Compatible with OBS and Streamlabs.</p>
             </div>
+            <div class="bayangan absolute bg-gray-900 w-full h-full top-2 left-2 -z-10 rounded-lg group-hover:top-1 group-hover:left-1"></div>
           </a>
         </div>
-        <div class="kiri-bawah bg-[#fac76c] border-[1px] border-black rounded-lg">
+        <div class="kiri-bawah group bg-[#fac76c] hover:mt-0.5 hover:-mb-0.5 border-[1px] border-black rounded-lg relative">
           <a href="#">
             <div class="pt-8 pl-10 pr-10 flex w-full">
-              <p class="font-[comfortaa] text-3xl">Support Sent</p>
+              <p class="font-[comfortaa] text-3xl font-semibold">Support Sent</p>
               <div class="w-52"></div>
               <img src="public/image/doggo_happy.svg" alt="" class="max-h-[170px]">
             </div>
@@ -73,11 +74,12 @@
               <p class="font-ibm">See the support you have sent.</p>
               <p class="font-ibm"></p>
             </div>
+            <div class="bayangan absolute bg-gray-900 w-full h-full top-2 left-2 -z-10 rounded-lg group-hover:top-1 group-hover:left-1"></div>
           </a>
         </div>
       </div>
-      <div class="row-kanan w-1/2 flex flex-col gap-9">
-        <div class="kanan-atas bg-[#C2ACE6] border-[1px] border-black rounded-lg">
+      <div class="row-kanan w-1/2 flex flex-col gap-[35px]">
+        <div class="kanan-atas group bg-[#C2ACE6] hover:mt-0.5 hover:-mb-0.5 border-[1px] border-black rounded-lg relative">
           <a href="#">
             <div class="pt-8 pl-10 pr-6 flex w-full">
               <p class="font-[comfortaa] text-3xl font-semibold">Support and Cashout</p>
@@ -87,18 +89,20 @@
             <div class="text pb-12 pl-10">
               <p class="font-ibm ">See your incoming support and cashout history here.</p>
             </div>
+            <div class="bayangan absolute bg-gray-900 w-full h-full top-2 left-2 -z-10 rounded-lg group-hover:top-1 group-hover:left-1"></div>
           </a>
         </div>
-        <div class="kanan-atas bg-[#fe98a3] border-[1px] border-black rounded-lg">
+        <div class="kanan-bawah group bg-[#fe98a3] hover:mt-0.5 hover:-mb-0.5 border-[1px] border-black rounded-lg relative">
           <a href="#">
             <div class="pt-8 pl-10 pr-6 flex w-full">
               <p class="font-[comfortaa] text-3xl font-semibold">Integration</p>
               <div class="w-full"></div>
-              <img src="public/image/raccoon_happy.svg" alt="" class="max-h-[152px] place-self-end">
+              <img src="public/image/raccoon_happy.svg" alt="" class="max-h-[154px] place-self-end">
             </div>
             <div class="text pb-12 pl-10">
               <p class="font-ibm ">Integrate other apps with saweria!</p>
             </div>
+            <div class="bayangan absolute bg-gray-900 w-full h-full top-2 left-2 -z-10 rounded-lg group-hover:top-1 group-hover:left-1"></div>
           </a>
         </div>
       </div>
